@@ -32,6 +32,8 @@ IN DEVELOPMENT
 
    * Don't try to import files as branches.
 
+   * Store file id map when committing to Subversion. (#54738)
+
   IMPROVEMENTS
 
    * Implemented SvnRepository.all_revision_ids().
